--- a/kk/src/App.css
+++ b/kk/src/App.css
@@ -1,6 +1,15 @@
 body {
   background-color: #282c34;
 }
+* {
+  user-select: none; /* supported by Chrome and Opera */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+
+  -webkit-tap-highlight-color: transparent;
+}
 
 .App {
   text-align: center;
