--- a/kk/src/components/home/sections/navigation/Pages/Pages.css
+++ b/kk/src/components/home/sections/navigation/Pages/Pages.css
@@ -1,52 +1,54 @@
 section.navigation {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;    
+    justify-content: space-evenly;
     margin-top: 20px;
     background-color: #181b36;
     padding: 20px 0;
 }
-.navigation div{    
+
+.navigation div {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .navigation .navigation-wrapper {
     width: 80%;
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
-.navigation .icons{
-    border-radius: 50%;
-    min-width:200px;
-    min-height:200px;
-    margin:10px;
 
-    text-transform: capitalize;
-    color:#DDD;
+.navigation .icons {
+    border-radius: 50%;
+    min-width: 200px;
+    min-height: 200px;
+    margin: 10px;
     background-position: center top;
     background-size: 101% auto;
     cursor: pointer;
-    transition:0.4s;
-    box-shadow: 0px 0px 0px rgba(0,0,0,0);
+    transition: 0.4s;
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
     filter: grayscale(1);
 }
 
 .navigation .icons:hover {
- transform: scale(1.1);
- box-shadow: 8px 8px 8px rgba(0,0,0,0.8);
- filter: grayscale(0);
- 
- /* font-size: 25px; */
- /* text-shadow: 1px 0 0 #222, -1px 0 0 #222, 0 1px 0 #222, 0 -1px 0 #222, 1px 1px #222, -1px -1px 0 #222, 1px -1px 0 #222, -1px 1px 0 #222; */
+    transform: scale(1.1);
+    box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.8);
+    filter: grayscale(0);
 }
-.navigation .icons a h3{
+
+.navigation .icons a {
+    color: #DDD;
+    text-transform: capitalize;
+    text-decoration: none;
     transform: scale(1);
     text-shadow: 1px 0 0 #222, -1px 0 0 #222, 0 1px 0 #222, 0 -1px 0 #222, 1px 1px #222, -1px -1px 0 #222, 1px -1px 0 #222, -1px 1px 0 #222;
     opacity: 0;
-    transition:0.4s;
+    transition: 0.4s;
 }
-.navigation .icons:hover a h3{
+
+.navigation .icons:hover a {
     transform: scale(1.5);
     opacity: 1;
 }
