--- a/kk/src/components/header/Header.css
+++ b/kk/src/components/header/Header.css
@@ -5,6 +5,9 @@
     background: #1c2028;
     padding: 3px;
     height: 20px;
+    position: sticky;
+    width: 100%;
+    z-index: 2;
 }
 
 .header .logo {
