--- a/kk/src/components/header/Header.css
+++ b/kk/src/components/header/Header.css
@@ -8,6 +8,8 @@
     position: sticky;
     top:0;
     width: 100%;
+    height: 100%;
+    box-sizing: border-box;
     z-index: 2;
 }
 
@@ -19,6 +21,7 @@
 .header a,
 .header div {
     display: flex;
+    flex-wrap: wrap;
     cursor: pointer;
     padding: 0 8px;
     background-color: transparent;
@@ -44,26 +47,32 @@
     align-items: center;
 }
 
+.header .navigation .contato {
+    position: relative;
+}
+
 .header .navigation .contato .contato-tooltip {
+    pointer-events: none;
     width: 155px;
     height: 100px;
     background-color: #181b36;
     position: absolute;
-    top: 27px;
-    right: 3px;
+    top: 25px;
+    right: 5px;
     border-radius: 5px;
     display: flex;
     justify-content: space-evenly;
     align-items: baseline;
     flex-direction: column;
     opacity: 0;
-    transition: 0.3s;
-    z-index: -1;
 }
 
-.header .navigation .contato:hover .contato-tooltip {
+.header .navigation .contato:hover .contato-tooltip,
+.header .navigation .contato .contato-tooltip:hover {
+    pointer-events: all;
     z-index: 1;
     opacity: 1;
+    transition: 0.3s;
 }
 
 .header a,
@@ -74,4 +83,10 @@
 
 .header .navigation .contato .contato-tooltip a svg {
     padding-right: 10px;
+}
+
+@media only screen and (max-width: 850px) {
+    .header .navigation .contato .contato-tooltip{
+        right: 0px;
+    }
 }
