--- a/kk/src/components/home/sections/navigation/Pages/Pages.css
+++ b/kk/src/components/home/sections/navigation/Pages/Pages.css
@@ -45,10 +45,18 @@ section.navigation {
     transform: scale(1);
     text-shadow: 1px 0 0 #222, -1px 0 0 #222, 0 1px 0 #222, 0 -1px 0 #222, 1px 1px #222, -1px -1px 0 #222, 1px -1px 0 #222, -1px 1px 0 #222;
     opacity: 0;
-    transition: 0.4s;
 }
 
 .navigation .icons:hover a {
     transform: scale(1.5);
     opacity: 1;
+}
+
+@media only screen and (max-width: 850px) {
+    .navigation .icons{
+        min-width: 50px;
+        min-height: 50px;
+        width: min(30vw, 30vh);
+        height: min(30vw, 30vh);
+    }
 }
