--- a/kk/src/components/home/sections/presentation/Presentation.css
+++ b/kk/src/components/home/sections/presentation/Presentation.css
@@ -1,4 +1,4 @@
-.presentation h2{
+.presentation h1{
   margin:0;
   font-size: 150px;
   height: 100%;
@@ -18,4 +18,10 @@
   color: #EEE;
   text-transform: uppercase;
   text-shadow: 3px 3px 3px rgba(16,16,16,0.8)
+}
+
+@media only screen and (max-width: 850px) {
+  .presentation h1{
+    font-size: min(20vh, 100vw);
+  }
 }
