Alteração da página não encontrada

--- a/kk/src/components/header/Header.css
+++ b/kk/src/components/header/Header.css
@@ -45,6 +45,7 @@
 .header .navigation {
     display: flex;
     align-items: center;
+    justify-content: flex-end;
 }
 
 .header .navigation .contato {
