--- a/kk/src/components/header/Header.css
+++ b/kk/src/components/header/Header.css
@@ -1,14 +1,13 @@
 .header {
-    color: #EEE;
     display: flex;
+    width: 100%;
+    height: 26px;
+    position: sticky;
+    padding: 3px;
+    color: #EEE;
     justify-content: space-between;
     background: #1c2028;
-    padding: 3px;
-    height: 20px;
-    position: sticky;
     top:0;
-    width: 100%;
-    height: 100%;
     box-sizing: border-box;
     z-index: 2;
 }
@@ -21,7 +20,6 @@
 .header a,
 .header div {
     display: flex;
-    flex-wrap: wrap;
     cursor: pointer;
     padding: 0 8px;
     background-color: transparent;
@@ -87,6 +85,15 @@
 }
 
 @media only screen and (max-width: 850px) {
+    .header { 
+        height: 100%;
+    }
+
+    .header a,
+    .header div {
+        flex-wrap: wrap;
+    }
+
     .header .navigation .contato .contato-tooltip{
         right: 0px;
     }
