--- a/kk/src/components/header/Header.css
+++ b/kk/src/components/header/Header.css
@@ -1,106 +1,106 @@
 .header {
-    display: flex;
-    width: 100%;
-    height: 26px;
-    position: sticky;
-    padding: 3px;
-    color: #EEE;
-    justify-content: space-between;
-    background: #1c2028;
-    top:0;
-    box-sizing: border-box;
-    z-index: 2;
+  display: flex;
+  width: 100%;
+  height: 26px;
+  position: sticky;
+  padding: 3px;
+  color: #eee;
+  justify-content: space-between;
+  background: #1c2028;
+  top: 0;
+  box-sizing: border-box;
+  z-index: 5;
 }
 
 .header .logo {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .header a,
 .header div {
-    display: flex;
-    cursor: pointer;
-    padding: 0 8px;
-    background-color: transparent;
-    border: none;
-    font-size: 15px;
-    font-family: monospace;
-    text-shadow: 1px 1px 1px #919191;
-    transition: 0.2s
+  display: flex;
+  cursor: pointer;
+  padding: 0 8px;
+  background-color: transparent;
+  border: none;
+  font-size: 15px;
+  font-family: monospace;
+  text-shadow: 1px 1px 1px #919191;
+  transition: 0.2s;
 }
 
 .header .logo {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 .header > div > a:hover,
 .header > div > div:hover {
-    font-size: 20px;
-    text-shadow: 1px 1px 1px #919191, 3px 3px 2px rgba(16, 16, 16, 0.8)
+  font-size: 20px;
+  text-shadow: 1px 1px 1px #919191, 3px 3px 2px rgba(16, 16, 16, 0.8);
 }
 
 .header > div > div a:hover {
-    padding-left: 20px;
+  padding-left: 20px;
 }
 
 .header .navigation {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .header .navigation .contato {
-    position: relative;
+  position: relative;
 }
 
 .header .navigation .contato .contato-tooltip {
-    pointer-events: none;
-    width: 135px;
-    height: 100px;
-    background-color: #181b36;
-    position: absolute;
-    top: 24px;
-    right: 5px;
-    border-radius: 5px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: baseline;
-    flex-direction: column;
-    opacity: 0;
-    box-shadow: 0px 0px 0px rgb(0 0 0 / 80%);
-    transition: 0.3s;
+  pointer-events: none;
+  width: 135px;
+  height: 100px;
+  background-color: #181b36;
+  position: absolute;
+  top: 24px;
+  right: 5px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: baseline;
+  flex-direction: column;
+  opacity: 0;
+  box-shadow: 0px 0px 0px rgb(0 0 0 / 80%);
+  transition: 0.3s;
 }
 
 .header .navigation .contato:hover .contato-tooltip,
 .header .navigation .contato .contato-tooltip:hover {
-    pointer-events: all;
-    z-index: 1;
-    opacity: 1;
-    box-shadow: 8px 8px 8px rgb(0 0 0 / 80%);
+  pointer-events: all;
+  z-index: 1;
+  opacity: 1;
+  box-shadow: 8px 8px 8px rgb(0 0 0 / 80%);
 }
 
 .header a,
 .header .navigation .contato .contato-tooltip a {
-    color: #DDD;
-    text-decoration: none;
+  color: #ddd;
+  text-decoration: none;
 }
 
 .header .navigation .contato .contato-tooltip a svg {
-    padding-right: 10px;
+  padding-right: 10px;
 }
 
 @media only screen and (max-width: 850px) {
-    .header { 
-        height: 100%;
-    }
+  .header {
+    height: 100%;
+  }
 
-    .header a,
-    .header div {
-        flex-wrap: wrap;
-    }
+  .header a,
+  .header div {
+    flex-wrap: wrap;
+  }
 
-    .header .navigation .contato .contato-tooltip{
-        right: 0px;
-    }
+  .header .navigation .contato .contato-tooltip {
+    right: 0px;
+  }
 }
