--- a/kk/src/components/menu/side-menu/Options/Options.css
+++ b/kk/src/components/menu/side-menu/Options/Options.css
@@ -1,17 +1,16 @@
 .options {
-    padding: 3px; 
-    text-align: initial;
-    text-decoration: none;
-    font-size: 15px;
-    transition: 0.2s;
+  padding: 3px;
+  text-align: initial;
+  text-decoration: none;
+  font-size: 15px;
+  transition: 0.2s;
 }
 
 .options:hover {
-    padding-left: 10px;
-    background-color: #181b36;
+  padding-left: 10px;
+  background-color: #181b36;
 }
 
-
 .options:before {
-    content: '> ';
+  content: "> ";
 }
